# detonate

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  WINDOWS_DLL_SETUP.md  docker-compose.cli.yml  docker-compose.yml  pyproject.toml  task.md
.opencode/state/: backward.md  forward.md
docker/: entrypoint.sh
examples/samples/: GO_SAMPLES_LIMITATION.md  README.md  TRIGGER_SYSCALLS_C_README.md  build_all.sh  go.mod  minimal_x86.c  minimal_x86_64.c  test_e2e.sh  trigger_syscalls  trigger_syscalls.c  trigger_syscalls.go  trigger_syscalls_c  trigger_syscalls_c_arm64  trigger_syscalls_go_arm64  trigger_syscalls_go_minimal.S  trigger_syscalls_go_nocgo  trigger_syscalls_go_nocgo.go  trigger_x86_64.c
src/detonate/: __init__.py  cli.py  config.py
src/detonate/api/: app.py  middleware.py  models.py  routes.py
src/detonate/core/: __init__.py  emulator.py  session.py  timeout.py
src/detonate/core/hooks/: __init__.py  linux.py  windows.py
src/detonate/db/: __init__.py  init_db.py  models.py  store.py
src/detonate/mapping/: __init__.py  attribution.py  data_sources.py  engine.py  linux_map.py  mitigations.py  patterns.py  stix_data.py  windows_map.py
src/detonate/utils/: __init__.py  binary.py  cve_lookup.py  hashing.py
tests/: conftest.py  test_api.py  test_attribution.py  test_cli.py  test_confidence_calibration.py  test_cve_lookup.py  test_data_sources.py  test_db.py  test_emulator.py  test_enhanced_windows_hooks.py  test_indicators.py  test_infrastructure.py  test_linux_hooks.py  test_mapping.py  test_mitigations.py  test_navigator.py  test_session.py  test_utils.py  test_windows_hooks.py
web/: analyses.html  analysis.html  index.html  navigator.html  submit.html
web/css/: custom.css
web/js/: analyses.js  analysis.js  app.js  dashboard.js  navigator.js  submit.js
