[tool.poetry]
name = "detonate"
version = "0.1.0"
description = "Malware analysis platform with ATT&CK mapping"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiling = "^1.4"
structlog = "^24"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
typer = {extras = ["all"], version = "^0.12"}
stix2 = "^3.0"
python-multipart = "^0.0"
aiofiles = "^24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
black = "^24.0"
ruff = "^0.6"
mypy = "^1.0"

[tool.poetry.scripts]
detonate = "detonate.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
