[project]
name = "detonate"
version = "0.1.0"
description = "Malware analysis platform with ATT&CK mapping"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qiling>=1.4,<2.0",
    "structlog>=24,<25",
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "typer>=0.12,<0.13",
    "click<8.2.0",
    "stix2>=3.0,<4.0",
    "python-multipart>=0.0,<1.0",
    "aiofiles>=24.0,<25.0",
]

[project.scripts]
detonate = "detonate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27,<0.28",
    "black>=24.0,<25.0",
    "ruff>=0.6,<0.7",
    "mypy>=1.0,<2.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
